<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/splashBanner"
        android:text="@string/splash_banner"
        android:textAlignment="center"
        android:textSize="10pt"
        android:textStyle="bold"
        android:padding="15dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editDataButton"
        android:text="@string/edit_string"
        android:layout_below="@id/splashBanner"
        android:padding="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/createNewButton"
        android:layout_below="@+id/editDataButton"
        android:text="@string/add_string"
        android:padding="15dp"
        android:layout_marginTop="15dp"
        android:layout_alignRight="@id/editDataButton"
        android:layout_alignEnd="@id/editDataButton"
        android:layout_alignLeft="@id/editDataButton"
        android:layout_alignStart="@id/editDataButton"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/uploadButton"
        android:text="@string/upload_string"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>
</RelativeLayout>